--- a/watch-my-cam/src/main/res/layout/off_layout.xml
+++ b/watch-my-cam/src/main/res/layout/off_layout.xml
@@ -7,13 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.nosolojava.android.watchmycam.OldMainActivity"
+    tools:context="com.nosolojava.android.watchmycam.MainActivity"
     tools:ignore="MissingPrefix">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
+        android:text="Application closed"
         />
 
 </RelativeLayout>
